* Add option to GlibURLDownloader to download to specified file instead
  of tempfile (dcbw)

Snapshot 8ae99aaa87

* #2268 Allow removing downloads from the clipboard while in progress. (tomeu)
* #2240 Ensure activity uniquness in the shell. (marco)

Snapshot f6f3f2b520

* #2103 Use selection grey for progress in the browser entry. (marco)
* Fix opening downloads from the clipboard. (marco)

Snapshot 6b57baa075

* #2008 Place free views palettes at cursor. (marco)
* Actually handle multiple mime types (dcbw)
* Keep owner in the center in mesh view (dcbw)
* Suppress annoying warnings about unknown activities from the PS (dcbw)
* Don't close GlibTCPServer sockets prematurely (dcbw)

Snapshot 5212790236

* Fix initialization order of buddy class '_activities' member (dcbw)
* Update brazilian translation.
* Add polish translation.
* Add french translation.
* #958, #1433 Refactor brightness and volume key handling to follow
Eben specification and the new B3 keyboard (marco)

Snapshot fd7336c2f1

* Suppress traceback when creating a new buddy object on buddy-disappeared
  signal

Snapshot 9f4da4e6d1

* #775 Show the activity's creator colors in the donut. (danw)
* #2185 Do not shutdown on power button, ohm does it now. (marco)
* #1888 Choose the correct mime type when adding text from Write to the
  clipboard. (tomeu)
* #2149, #2150: fixes for the clipboard palette. (tomeu)
* #2163 Arrow icons in the intro screen buttons. (marco)

Snapshot 4c352d1f83

* Adapt to the datastore API changes. (tomeu)

Snapshot ec7eb2ebbb

* Update the XO colors with a new list from walter. (marco)
* Refactored the intro screen UI to start matching the new design. (marco)
* #1720 Show the name of the wireless network to which we are connected. (tomeu)
* #1888 Fix opening items from the clipboard. (tomeu)
* #1984 Fix removing items from the clipboard. (tomeu)

Snapshot b83a9ec27d

* Fix font size on the XO. (marco)
* Make developer console work again. (marco)